test add server.port config to properties file

--- a/notification-service.properties
+++ b/notification-service.properties
@@ -2,3 +2,5 @@ spring.application.name=notification-service
 
 notification.company.name=Rikkeisoft
 notification.company.phone=0123456789
+
+server.port=8200
