move all config from client service to server config

--- a/notification-service.properties
+++ b/notification-service.properties
@@ -4,3 +4,7 @@ notification.company.name=Rikkeisoft
 notification.company.phone=0123456789
 
 server.port=8200
+
+spring.cloud.config.uri=http://localhost:8888
+
+feign-client-notification-service.ribbon.listOfServers=http://localhost:8100, http://localhost:8101
