--- a/user-service.properties
+++ b/user-service.properties
@@ -2,3 +2,7 @@ spring.application.name=user-service
 
 user.username.maxLength=11
 user.username.minLength=1
+
+server.port=8100
+# get setting from server config
+spring.cloud.config.uri=http://localhost:8888
