do not override commmand line config

--- a/notification-service.properties
+++ b/notification-service.properties
@@ -5,6 +5,8 @@ notification.company.phone=0123456789
 
 server.port=8200
 
-spring.cloud.config.uri=http://localhost:8888
-
 feign-client-notification-service.ribbon.listOfServers=http://localhost:8100, http://localhost:8101
+
+spring.cloud.config.allowOverride=true
+spring.cloud.config.overrideNone=true
+spring.cloud.config.overrideSystemProperties=false
