--- a/user-service.properties
+++ b/user-service.properties
@@ -4,5 +4,6 @@ user.username.maxLength=11
 user.username.minLength=1
 
 server.port=8100
-# get setting from server config
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.allowOverride=true
+spring.cloud.config.overrideNone=true
+spring.cloud.config.overrideSystemProperties=false
