--- a/notification-service.properties
+++ b/notification-service.properties
@@ -8,3 +8,5 @@ server.port=8200
 spring.cloud.config.allowOverride=true
 spring.cloud.config.overrideNone=true
 spring.cloud.config.overrideSystemProperties=false
+
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
