--- a/user-service.properties
+++ b/user-service.properties
@@ -7,3 +7,5 @@ server.port=8100
 spring.cloud.config.allowOverride=true
 spring.cloud.config.overrideNone=true
 spring.cloud.config.overrideSystemProperties=false
+
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
